syntax = "proto3";
package saonetwork.sao.order;

import "sao/order/shard.proto";
option go_package = "github.com/SaoNetwork/sao/x/order/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message Order {
  string creator = 1; 
  string owner = 2;
  uint64 id = 3;
  string provider = 4; 
  string cid = 5; 
  uint64 duration = 6;
  int32 expire = 7;
  int32 status = 8; 
  int32 replica = 9;
  string data_id = 10;
  repeated uint64 shards = 11;
  cosmos.base.v1beta1.Coin amount = 12 [(gogoproto.nullable) = false]; 
  uint64 size = 13;
  uint32 operation = 14;
  uint64 created_at = 15;
  string commit = 16;
}

message FullOrder {
  string creator = 1; 
  string owner = 2;
  uint64 id = 3;
  string provider = 4; 
  string cid = 5; 
  uint64 duration = 6;
  int32 expire = 7;
  int32 status = 8; 
  int32 replica = 9;
  string data_id = 10;
  repeated uint64 shardIds = 12; 
  map<string, Shard> shards = 13; 
  cosmos.base.v1beta1.Coin amount = 14 [(gogoproto.nullable) = false]; 
  uint64 size = 15;
  uint32 operation = 16;
  uint64 created_at = 17;
}
